src/snapshots/afrotd__parser__tests__rule_html_2.25.4.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            2.25.4 Dead Ball Spot
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Dead Ball Spot ist der Punkt, an dem der Ball dead wurde.
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.2.25.4"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
