src/snapshots/afrotd__parser__tests__rule_html_2.25.6.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            2.25.6 Out-of-bounds Spot
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Out-of-bounds Spot ist der Punkt, an dem der Ball gemäß den
                Regeln dead wird, weil er ins Aus geht oder für im Aus erklärt
                wird.
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.2.25.6"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
