src/snapshots/afrotd__parser__tests__rule_html_2.25.7.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            2.25.7 Inbounds Spot
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Der Inbounds Spot ist der Schnittpunkt der nächsten Hash Mark
                mit der Meterlinie, die sich entweder durch den Dead Ball Spot
                oder den Punkt zieht, an dem der Ball nach einer Strafe in
                einer Seitenzone verbleibt.
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.2.25.7"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
