src/snapshots/afrotd__parser__tests__rule_html_2.25.9.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            2.25.9 Punkt, an dem der Kick endet
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Ein Scrimmage Kick, der die neutrale Zone überquert, endet an
                dem Punkt, an dem Ballbesitz erlangt, wiedererlangt oder der
                Ball gemäß der Regel für dead erklärt wird (Regel 2.16.1.c).
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.2.25.9"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
