src/snapshots/afrotd__parser__tests__rule_html_2.27.1.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            2.27.1 Team A und Team B
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Team A ist das Team, das dazu bestimmt ist, den Ball ins Spiel
                zu bringen, und Team B ist der Gegner. Die Teams behalten diese
                Bezeichnungen, bis der Ball das nächste Mal spielbereit ist.
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.2.27.1"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
