src/snapshots/afrotd__parser__tests__rule_html_2.27.11.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            2.27.11 Unterzahl
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Unterzahl ist eine Situation, die entsteht, wenn ein Team
                weniger als 11 Spieler im Spiel hat.
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.2.27.11"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
